work and study updated

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <li class="nav__item"><a href="#home" class="nav__link active">Home</a></li>
                     <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
                     <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
-                    <li class="nav__item"><a href="#projects" class="nav__link">Projects</a></li>
+                    <!-- <li class="nav__item"><a href="#projects" class="nav__link">Projects</a></li> -->
                     <li class="nav__item"><a href="#certificates" class="nav__link">Certificates</a></li>
                     <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
                     <li class="nav__item">
@@ -78,16 +78,16 @@
                     <!-- <img src="Jay Profile.jpg" alt=""> -->
                     <div class="about__icons">
                         <a href="mailto:jaysolanki164@gmail.com"><i class="uil uil-fast-mail"></i></a>
-                        <a href="https://github.com/js164/"><i class="uil uil-github"></i></a>
+                        <!-- <a href="https://github.com/js164/"><i class="uil uil-github"></i></a> -->
                         <a href="https://www.linkedin.com/in/jay-solanki-bbb3771a1/"><i
                                 class="devicon-linkedin-plain colored"></i></a>
                         <!-- <a href="https://twitter.com/Jaysolanki164"><i class="uil uil-twitter"></i></a> -->
                     </div>
                 </div>
                 <div class="about__data">
-                    <h2 class="about__subtitle">Jay Solanki</h2>
-                    <p class="about__text">Aspire To Utilize My Skills That Can Contribute The Best For The Growth Of
-                        Organization While Ensuring Growth In Personal Career</p>
+                    <h2 class="about__subtitle">Jay Manharbhai Solanki</h2>
+                    <!-- <p class="about__text">Aspire To Utilize My Skills That Can Contribute The Best For The Growth Of
+                        Organization While Ensuring Growth In Personal Career</p> -->
                     <button class="about__button"><a href="JAY_SOLANKI_CV.pdf" download="resume">Resume <i
                                 class="uil uil-cloud-download"></i></a></button>
                 </div>
@@ -99,7 +99,7 @@
                 <button class="bar-title bar-title-active" id="title1" onclick="eduVisible()"><i
                         class="uil uil-graduation-cap"></i>Qualification</button>
                 <button class="bar-title" id="title15" onclick="workVisible()"><i
-                        class="uil uil-graduation-cap"></i>Internships & Work</button>
+                        class="uil uil-graduation-cap"></i>Work Experience & Internships</button>
                 <button class="bar-title" id="title2" onclick="hobbieVisible()"><i
                         class="uil uil-icons"></i>Hobbies</button>
             </div>
@@ -109,81 +109,86 @@
                         <h4 class="course-title">Computer Engineering</h4>
                         <div class="duration"><i class="uil uil-calendar-alt"></i> 2018 - 2022</div>
                         <p class="q_info">L. D. College of Engineering</p>
-                        <p class="q_info">University: GTU</p>
+                        <p class="q_info">University: Gujarat Technological University, Ahmedabad, India</p>
                         <p class="q_info">Grade: 9.24</p>
                     </div>
                     <div class="q_track">
                         <div class="q_line"></div>
                         <div class="q_vline"></div>
                     </div>
-                    <div class="q_extra"></div>
+                    <!-- <div class="q_extra"></div> -->
                 </div>
                 <div class="qualification__list">
-                    <div class="q_data q_right_data">
+                    <div class="q_data">
                         <h4 class="course-title">HSC</h4>
                         <div class="duration"><i class="uil uil-calendar-alt"></i> 2017 - 2018</div>
-                        <p class="q_info">Board: GSEB</p>
+                        <p class="q_info">Board: Gujarat Secondary and Higher Secondary Education Board, Gandhinagar, India</p>
                         <p class="q_info">Grade: 78.62%</p>
                     </div>
                     <div class="q_track">
                         <div class="q_right"></div>
                         <div class="q_vline"></div>
                     </div>
-                    <div class="q_extra"></div>
+                    <!-- <div class="q_extra"></div> -->
                 </div>
                 <div class="qualification__list">
                     <div class="q_data">
                         <h4 class="course-title">SSC</h4>
                         <div class="duration"><i class="uil uil-calendar-alt"></i> 2015 - 2016</div>
-                        <p class="q_info">Board: GSEB</p>
+                        <p class="q_info">Board: Gujarat Secondary and Higher Secondary Education Board, Gandhinagar, India</p>
                         <p class="q_info">Grade: 83.17%</p>
                     </div>
                     <div class="q_track">
                         <div class="q_line"></div>
                         <div class="q_vline"></div>
                     </div>
-                    <div class="q_extra"></div>
+                    <!-- <div class="q_extra"></div> -->
                 </div>
             </div>
             <div class="work__container">
                 <div class="work__list">
                     <div class="w_extra"></div>
                     <div class="w_track">
-                        <div class="w_line"></div>
-                        <div class="w_vline"></div>
+                        <!-- <div class="w_line"></div>
+                        <div class="w_vline"></div> -->
+                        <div class="duration"><i class="uil uil-calendar-alt"></i>June 2022-October 2023</div>
                     </div>
                     <div class="w_data ">
                         <h4 class="course-title">System Engineer</h4>
-                        <div class="duration"><i class="uil uil-calendar-alt"></i> Jun 2022- Oct 2023</div>
-                        <p class="w_info">Organization: Tata Consultancy Services</p>
-                    </div>
-                </div>
-                <div class="work__list">
-                    <div class="w_extra"></div>
-                    <div class="w_track">
-                        <div class="w_right"></div>
-                        <div class="w_vline"></div>
-                    </div>
-                    <div class="w_data">
-                        <h4 class="course-title">DevOps Internship</h4>
-                        <div class="duration"><i class="uil uil-calendar-alt"></i> Mar 2022-May 2022</div>
                         <p class="w_info">Organization: Tata Consultancy Services <br>
-                            Workings: Created microservices on spring boot, implemented CI/CD pipeline, git push triggers Jenkins pipeline, docker file created and pushed, updates reflect on AWS EC2 & real-world running application.
+                            Technology: C, AWS, Jenkins, Docker <br>
+                            Client: Avis Budget Group <br>
+                            Work: established connection between RateShop application and Pricing application, analysed and fixed multiple bugs, filtering unexpected characters while sending data, calculating estimated price for car rent(including insurance, taxes, extra fees according to location and timing)
                         </p>
                     </div>
                 </div>
                 <div class="work__list">
                     <div class="w_extra"></div>
                     <div class="w_track">
-                        <div class="w_line"></div>
-                        <div class="w_vline"></div>
+                        <!-- <div class="w_right"></div>
+                        <div class="w_vline"></div> -->
+                        <div class="duration"><i class="uil uil-calendar-alt"></i>March 2022-June 2022</div>
+                    </div>
+                    <div class="w_data">
+                        <h4 class="course-title">DevOps Internship</h4>
+                        <p class="w_info">Organization: Tata Consultancy Services <br>
+                            Technology: Spring boot, AWS, Docker, Jenkins, Angular <br>
+                            Workings: Created micro-services, implemented CI/CD pipeline, git push triggers Jenkins pipeline, docker file created and pushed, updates reflect on AWS EC2 & real-world running application.
+                        </p>
+                    </div>
+                </div>
+                <div class="work__list">
+                    <div class="w_extra"></div>
+                    <div class="w_track">
+                        <!-- <div class="w_line"></div>
+                        <div class="w_vline"></div> -->
+                        <div class="duration"><i class="uil uil-calendar-alt"></i>January 2022-March 2022</div>
                     </div>
                     <div class="w_data">
                         <h4 class="course-title">Full Stack Internship</h4>
-                        <div class="duration"><i class="uil uil-calendar-alt"></i>Jan 2022-Mar 2022</div>
                         <p class="w_info">Organization: ByajBook <br>
-                            Worked on developing Byajbook Desktop Application and Web Application. <br>
-                            Workings: Sync Services, Language Internationalization, Notification Setup, Permissions,  Razorpay Payment, APIs, etc..
+                            Technology: Angular, Electron.js <br>
+                            Workings: Deskop and web Application, Sync Services, Language Internationalization, Notifications, Permissions, Razorpay Payment, APIs
                         </p>
                     </div>
                 </div>
@@ -219,7 +224,70 @@
             <h2 class="section-title">Skills</h2>
             <div class="skills__container bd-grid">
                 <h2 class="skills__subtitle">Profesional Skills</h2>
-
+                <div class="skills__data">
+                    <div class="skills__names">
+                        <i class='devicon-nodejs-plain colored skills__icon'></i>
+                        <span class="skills__name">Node.js</span>
+                    </div>
+                    <div class="skills__bar skills__mern"></div>
+                    <!-- <div><span class="skills__percentage">70%</span></div> -->
+                </div>
+                <div class="skills__data">
+                    <div class="skills__names">
+                        <i class='devicon-express-original colored skills__icon'></i>
+                        <span class="skills__name">Express.js</span>
+                    </div>
+                    <div class="skills__bar skills__django"></div>
+                    <!-- <div><span class="skills__percentage">55%</span></div> -->
+                </div>
+                <div class="skills__data">
+                    <div class="skills__names">
+                        <i class='devicon-react-original colored skills__icon'></i>
+                        <span class="skills__name">React.js</span>
+                    </div>
+                    <div class="skills__bar skills__java"></div>
+                    <!-- <div><span class="skills__percentage">40%</span></div> -->
+                </div>
+                <div class="skills__data">
+                    <div class="skills__names">
+                        <i class='devicon-angularjs-plain colored skills__icon'></i>
+                        <span class="skills__name">Angular</span>
+                    </div>
+                    <div class="skills__bar skills__angular"></div>
+                    <!-- <div><span class="skills__percentage">65%</span></div> -->
+                </div>
+                <div class="skills__data">
+                    <div class="skills__names">
+                        <i class='devicon-amazonwebservices-plain-wordmark colored skills__icon'></i>
+                        <span class="skills__name">AWS Cloud</span>
+                    </div>
+                    <div class="skills__bar skills__aws"></div>
+                    <!-- <div><span class="skills__percentage">75%</span></div> -->
+                </div>
+                <div class="skills__data">
+                    <div class="skills__names">
+                        <i class='devicon-python-plain colored skills__icon'></i>
+                        <span class="skills__name">Python</span>
+                    </div>
+                    <div class="skills__bar skills__py"></div>
+                    <!-- <div><span class="skills__percentage">70%</span></div> -->
+                </div>
+                <div class="skills__data">
+                    <div class="skills__names">
+                        <i class='devicon-c-plain colored skills__icon'></i>
+                        <span class="skills__name">C programming</span>
+                    </div>
+                    <div class="skills__bar skills__c"></div>
+                    <!-- <div><span class="skills__percentage">75%</span></div> -->
+                </div>
+                <div class="skills__data">
+                    <div class="skills__names">
+                        <i class='devicon-mysql-plain colored skills__icon'></i>
+                        <span class="skills__name">MySQL</span>
+                    </div>
+                    <div class="skills__bar skills__mysql"></div>
+                    <!-- <div><span class="skills__percentage">60%</span></div> -->
+                </div>
                 <div class="skills__data">
                     <div class="skills__names">
                         <i class='bx bxl-html5 skills__icon'></i>
@@ -235,70 +303,6 @@
                     </div>
                     <div class="skills__bar skills__js"></div>
                     <!-- <div><span class="skills__percentage">70%</span></div> -->
-                </div>
-                <div class="skills__data">
-                    <div class="skills__names">
-                        <i class='devicon-amazonwebservices-plain-wordmark colored skills__icon'></i>
-                        <span class="skills__name">AWS Solution Architect</span>
-                    </div>
-                    <div class="skills__bar skills__aws"></div>
-                    <!-- <div><span class="skills__percentage">75%</span></div> -->
-                </div>
-                <div class="skills__data">
-                    <div class="skills__names">
-                        <i class='devicon-nodejs-plain colored skills__icon'></i>
-                        <span class="skills__name">MERN (MongoDB, Express, React, Node.js)</span>
-                    </div>
-                    <div class="skills__bar skills__mern"></div>
-                    <!-- <div><span class="skills__percentage">70%</span></div> -->
-                </div>
-                <div class="skills__data">
-                    <div class="skills__names">
-                        <i class='devicon-c-plain colored skills__icon'></i>
-                        <span class="skills__name">C</span>
-                    </div>
-                    <div class="skills__bar skills__c"></div>
-                    <!-- <div><span class="skills__percentage">75%</span></div> -->
-                </div>
-                <div class="skills__data">
-                    <div class="skills__names">
-                        <i class='devicon-angularjs-plain colored skills__icon'></i>
-                        <span class="skills__name">Angular</span>
-                    </div>
-                    <div class="skills__bar skills__angular"></div>
-                    <!-- <div><span class="skills__percentage">65%</span></div> -->
-                </div>
-                <div class="skills__data">
-                    <div class="skills__names">
-                        <i class='devicon-python-plain colored skills__icon'></i>
-                        <span class="skills__name">Python</span>
-                    </div>
-                    <div class="skills__bar skills__py"></div>
-                    <!-- <div><span class="skills__percentage">70%</span></div> -->
-                </div>
-                <div class="skills__data">
-                    <div class="skills__names">
-                        <i class='devicon-django-plain colored skills__icon'></i>
-                        <span class="skills__name">Django</span>
-                    </div>
-                    <div class="skills__bar skills__django"></div>
-                    <!-- <div><span class="skills__percentage">55%</span></div> -->
-                </div>
-                <div class="skills__data">
-                    <div class="skills__names">
-                        <i class='devicon-mysql-plain colored skills__icon'></i>
-                        <span class="skills__name">MySQL</span>
-                    </div>
-                    <div class="skills__bar skills__mysql"></div>
-                    <!-- <div><span class="skills__percentage">60%</span></div> -->
-                </div>
-                <div class="skills__data">
-                    <div class="skills__names">
-                        <i class='devicon-java-plain colored skills__icon'></i>
-                        <span class="skills__name">Java</span>
-                    </div>
-                    <div class="skills__bar skills__java"></div>
-                    <!-- <div><span class="skills__percentage">40%</span></div> -->
                 </div>
             </div>
         </section>
