mobile overflow handle

--- a/index.html
+++ b/index.html
@@ -155,9 +155,8 @@
                     </div>
                     <div class="w_data ">
                         <h4 class="course-title">System Engineer</h4>
-                        <p class="w_info">Organization: Tata Consultancy Services <br>
+                        <p class="w_info">Organization: Tata Consultancy Services (Client: Avis Budget Group) <br>
                             Technology: C, AWS, Jenkins, Docker <br>
-                            Client: Avis Budget Group <br>
                             Work: established connection between RateShop application and Pricing application, analysed and fixed multiple bugs, filtering unexpected characters while sending data, calculating estimated price for car rent(including insurance, taxes, extra fees according to location and timing)
                         </p>
                     </div>
