--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
             </div>
         </section> -->
 
-        <section class="project-slider" id="certificates">
+        <section class="project-slider section" id="certificates">
             <h2 class="section-title">Certificates</h2>
             <img class="certi-img" src="https://images.credly.com/size/340x340/images/0e284c3f-5164-4b21-8660-0d84737941bc/image.png" alt="not found" srcset="">
         </section>
@@ -426,7 +426,7 @@
                             <div class="contact__title">
                                 Phone
                             </div>
-                            +919099243317
+                            +91 9099243317
                         </div>
                     </div>
                     <div class="contact__details">
@@ -437,7 +437,7 @@
                             <div class="contact__title">
                                 Address
                             </div>
-                            Surat, Gujarat, India
+                            Surat, India 394130
                         </div>
                     </div>
                 </div>
@@ -454,7 +454,7 @@
         <footer class="footer">
             <div class="footer__icons">
                 <a href="mailto:jaysolanki164@gmail.com"><i class="uil uil-fast-mail"></i></a>
-                <a href="https://github.com/js164/"><i class="uil uil-github"></i></a>
+                <!-- <a href="https://github.com/js164/"><i class="uil uil-github"></i></a> -->
                 <a href="https://www.linkedin.com/in/jay-solanki-bbb3771a1/"><i
                         class="devicon-linkedin-plain colored"></i></a>
                 <!-- <a href="https://twitter.com/Jaysolanki164"><i class="uil uil-twitter"></i></a> -->
