--- a/index.html
+++ b/index.html
@@ -106,8 +106,20 @@
             <div class="qualification__container">
                 <div class="qualification__list">
                     <div class="q_data">
+                        <h4 class="course-title">M.Sc. Applied Computer Science</h4>
+                        <div class="duration"><i class="uil uil-calendar-alt"></i> October 2024 - Present</div>
+                        <p class="q_info">University: Georg-August-University Göttingen, Germany</p>
+                    </div>
+                    <div class="q_track">
+                        <div class="q_line"></div>
+                        <div class="q_vline"></div>
+                    </div>
+                    <!-- <div class="q_extra"></div> -->
+                </div>
+                <div class="qualification__list">
+                    <div class="q_data">
                         <h4 class="course-title">Computer Engineering</h4>
-                        <div class="duration"><i class="uil uil-calendar-alt"></i> 2018 - 2022</div>
+                        <div class="duration"><i class="uil uil-calendar-alt"></i>July 2018 - May 2022</div>
                         <p class="q_info">L. D. College of Engineering</p>
                         <p class="q_info">University: Gujarat Technological University, Ahmedabad, India</p>
                         <p class="q_info">Grade: 9.24</p>
@@ -121,7 +133,7 @@
                 <div class="qualification__list">
                     <div class="q_data">
                         <h4 class="course-title">HSC</h4>
-                        <div class="duration"><i class="uil uil-calendar-alt"></i> 2017 - 2018</div>
+                        <div class="duration"><i class="uil uil-calendar-alt"></i>June 2017 - March 2018</div>
                         <p class="q_info">Board: Gujarat Secondary and Higher Secondary Education Board, Gandhinagar, India</p>
                         <p class="q_info">Grade: 78.62%</p>
                     </div>
@@ -134,7 +146,7 @@
                 <div class="qualification__list">
                     <div class="q_data">
                         <h4 class="course-title">SSC</h4>
-                        <div class="duration"><i class="uil uil-calendar-alt"></i> 2015 - 2016</div>
+                        <div class="duration"><i class="uil uil-calendar-alt"></i>June 2015 - March 2016</div>
                         <p class="q_info">Board: Gujarat Secondary and Higher Secondary Education Board, Gandhinagar, India</p>
                         <p class="q_info">Grade: 83.17%</p>
                     </div>
@@ -426,7 +438,7 @@
                             <div class="contact__title">
                                 Phone
                             </div>
-                            +91 9099243317
+                            +49 174 7834635
                         </div>
                     </div>
                     <div class="contact__details">
@@ -437,7 +449,7 @@
                             <div class="contact__title">
                                 Address
                             </div>
-                            Surat, India 394130
+                            Göttingen, Germany 37075
                         </div>
                     </div>
                 </div>
