file name changed

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     <h2 class="about__subtitle">Jay Manharbhai Solanki</h2>
                     <!-- <p class="about__text">Aspire To Utilize My Skills That Can Contribute The Best For The Growth Of
                         Organization While Ensuring Growth In Personal Career</p> -->
-                    <button class="about__button"><a href="Jay_Solanki_CV.pdf" download="resume">Resume <i
+                    <button class="about__button"><a href="Jay_Solanki_CV.pdf" download="Jay_Solanki_CV">Resume <i
                                 class="uil uil-cloud-download"></i></a></button>
                 </div>
             </div>
