--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <!-- <img src="Jay Profile.jpg" alt=""> -->
                     <div class="about__icons">
                         <a href="mailto:jaysolanki164@gmail.com"><i class="uil uil-fast-mail"></i></a>
-                        <!-- <a href="https://github.com/js164/"><i class="uil uil-github"></i></a> -->
+                        <a href="https://github.com/js164/"><i class="uil uil-github"></i></a>
                         <a href="https://www.linkedin.com/in/jay-solanki-bbb3771a1/"><i
                                 class="devicon-linkedin-plain colored"></i></a>
                         <!-- <a href="https://twitter.com/Jaysolanki164"><i class="uil uil-twitter"></i></a> -->
@@ -109,6 +109,7 @@
                         <h4 class="course-title">M.Sc. Applied Computer Science</h4>
                         <div class="duration"><i class="uil uil-calendar-alt"></i> October 2024 - Present</div>
                         <p class="q_info">University: Georg-August-University Göttingen, Germany</p>
+                        <p class="q_info">Grade: 1.1</p>
                     </div>
                     <div class="q_track">
                         <div class="q_line"></div>
@@ -122,7 +123,7 @@
                         <div class="duration"><i class="uil uil-calendar-alt"></i>July 2018 - May 2022</div>
                         <p class="q_info">L. D. College of Engineering</p>
                         <p class="q_info">University: Gujarat Technological University, Ahmedabad, India</p>
-                        <p class="q_info">Grade: 9.24</p>
+                        <p class="q_info">Grade: 1.3 (CGPA: 9.24)</p>
                     </div>
                     <div class="q_track">
                         <div class="q_line"></div>
@@ -449,7 +450,7 @@
                             <div class="contact__title">
                                 Address
                             </div>
-                            Göttingen, Germany 37075
+                            Göttingen, Germany 37077
                         </div>
                     </div>
                 </div>
@@ -466,7 +467,7 @@
         <footer class="footer">
             <div class="footer__icons">
                 <a href="mailto:jaysolanki164@gmail.com"><i class="uil uil-fast-mail"></i></a>
-                <!-- <a href="https://github.com/js164/"><i class="uil uil-github"></i></a> -->
+                <a href="https://github.com/js164/"><i class="uil uil-github"></i></a>
                 <a href="https://www.linkedin.com/in/jay-solanki-bbb3771a1/"><i
                         class="devicon-linkedin-plain colored"></i></a>
                 <!-- <a href="https://twitter.com/Jaysolanki164"><i class="uil uil-twitter"></i></a> -->
