--- a/index.html
+++ b/index.html
@@ -164,6 +164,20 @@
                     <div class="w_track">
                         <!-- <div class="w_line"></div>
                         <div class="w_vline"></div> -->
+                        <div class="duration"><i class="uil uil-calendar-alt"></i>July 2025-Present</div>
+                    </div>
+                    <div class="w_data ">
+                        <h4 class="course-title">Research Assistant</h4>
+                        <p class="w_info">Organization: Gesellschaft für wissenschaftliche Datenverarbeitung mbH Göttingen (GWDG), Göttingen, Germany <br>
+                            Technology: React <br>
+                            Work: Creating AgentFlow website which allow user to generate pipeline.
+                    </div>
+                </div>
+                <div class="work__list">
+                    <div class="w_extra"></div>
+                    <div class="w_track">
+                        <!-- <div class="w_line"></div>
+                        <div class="w_vline"></div> -->
                         <div class="duration"><i class="uil uil-calendar-alt"></i>June 2022-October 2023</div>
                     </div>
                     <div class="w_data ">
